--- a/csknight.dev/src/static/style.css
+++ b/csknight.dev/src/static/style.css
@@ -62,6 +62,10 @@ nav .container {
   color: #f2f2f2;
   text-align: center;
   text-decoration: none;
+  cursor: pointer;
+}
+#nav a {
+  cursor: pointer;
 }
 
 .topnav .logo-icon-container {
@@ -377,4 +381,11 @@ a.social-icon svg {
 }
 .dark-footer .social-footer ul.social-footer-icons a.social-icon:hover {
   background-color: #b3b3b3;
+}
+
+.social-footer a {
+  cursor: pointer;
+}
+#footer a {
+  cursor: pointer;
 }
