--- a/csknight.dev/src/static/style.css
+++ b/csknight.dev/src/static/style.css
@@ -295,7 +295,7 @@ footer {
   min-height: 12rem;
   background-color: white;
   color: black;
-  display: none;
+  display: block;
   justify-content: center;
   align-items: center;
   flex-basis: 12rem;
